--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="author">By:</string>
+
+    <string name="about">PlattDrive App Version 1.0 Accomodates All Parties of A School.</string>
 </resources>
